--- a/hyperparam_opt/SVM_Tests_0521.ipynb
+++ b/hyperparam_opt/SVM_Tests_0521.ipynb
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 315,
    "metadata": {
     "id": "B9_4cxbyijm5"
    },
@@ -351,48 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ours: 1.729, 0.529\n",
-      "lvhba: 2.899, 1.378\n",
-      "gam: 8.752, 4.736\n",
-      "Accuracy\n",
-      "Ours: 0.767, 0.039\n",
-      "lvhba: 0.765, 0.039\n",
-      "gam: 0.721, 0.047\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Find time for converges\n",
-    "eps = 1e-10\n",
-    "# time_ours=axis_ours_all.flatten()[80*np.array(range(100))+np.argmax(np.hstack((np.ones((100,1)),  np.diff(val_loss_ours,axis=1)))**2<eps,axis =1)+1]\n",
-    "# time_lvhba=axis_lvhba_all.flatten()[80*np.array(range(100))+np.argmax(np.hstack((np.ones((100,1)), np.diff(val_loss_lvhba,axis=1)))**2<eps,axis =1)+1]\n",
-    "# time_gam=axis_gam_all.flatten()[80*np.array(range(100))+np.argmax(np.hstack((np.ones((100,1)), np.diff(val_loss_ga,axis=1)))**2<eps,axis =1)+1]\n",
-    "time_ours=axis_ours_all.flatten()[80*np.array(range(100))+np.argmax((test_acc_ours - test_acc_ours[:,-1][:, np.newaxis])**2<eps, axis = 1)+1]\n",
-    "time_lvhba=axis_lvhba_all.flatten()[80*np.array(range(100))+np.argmax((test_acc_lvhba - test_acc_lvhba[:,-1][:, np.newaxis])**2<eps, axis = 1)+1]\n",
-    "time_gam=axis_gam_all.flatten()[80*np.array(range(100)) + np.argmax((test_acc_ga - test_acc_ga[:,-1][:, np.newaxis])**2<eps, axis = 1)+1]\n",
-    "\n",
-    "\n",
-    "\n",
-    "print('Ours: {:0.3f}, {:0.3f}'.format(time_ours.mean(),time_ours.std()))\n",
-    "print('lvhba: {:0.3f}, {:0.3f}'.format(time_lvhba.mean(),time_lvhba.std()))\n",
-    "print('gam: {:0.3f}, {:0.3f}'.format(time_gam.mean(),time_gam.std()))\n",
-    "\n",
-    "print(\"Accuracy\")\n",
-    "print('Ours: {:0.3f}, {:0.3f}'.format(test_acc_ours[:,-1].mean(),test_acc_ours[:,-1].std()))\n",
-    "print('lvhba: {:0.3f}, {:0.3f}'.format(test_acc_lvhba[:,-1].mean(),test_acc_lvhba[:,-1].std()))\n",
-    "print('gam: {:0.3f}, {:0.3f}'.format(test_acc_ga[:,-1].mean(),test_acc_ga[:,-1].std()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 316,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -436,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 317,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -482,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 318,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -527,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 321,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -628,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 322,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -678,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 323,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -729,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 324,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -779,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 325,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -828,23 +787,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(100, 79)"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-------------- Running Time -------------\n",
+      "Ours: 1.729, 0.529\n",
+      "lvhba: 2.899, 1.378\n",
+      "gam: 8.752, 4.736\n",
+      "-------------- Accuracy -------------\n",
+      "Ours: 0.767, 0.039\n",
+      "lvhba: 0.765, 0.039\n",
+      "gam: 0.721, 0.047\n"
+     ]
     }
    ],
    "source": [
-    "lower_loss_ours.shape"
+    "# Find time for converges\n",
+    "eps = 1e-10\n",
+    "# time_ours=axis_ours_all.flatten()[80*np.array(range(100))+np.argmax(np.hstack((np.ones((100,1)),  np.diff(val_loss_ours,axis=1)))**2<eps,axis =1)+1]\n",
+    "# time_lvhba=axis_lvhba_all.flatten()[80*np.array(range(100))+np.argmax(np.hstack((np.ones((100,1)), np.diff(val_loss_lvhba,axis=1)))**2<eps,axis =1)+1]\n",
+    "# time_gam=axis_gam_all.flatten()[80*np.array(range(100))+np.argmax(np.hstack((np.ones((100,1)), np.diff(val_loss_ga,axis=1)))**2<eps,axis =1)+1]\n",
+    "time_ours=axis_ours_all.flatten()[80*np.array(range(100))+np.argmax((test_acc_ours - test_acc_ours[:,-1][:, np.newaxis])**2<eps, axis = 1)+1]\n",
+    "time_lvhba=axis_lvhba_all.flatten()[80*np.array(range(100))+np.argmax((test_acc_lvhba - test_acc_lvhba[:,-1][:, np.newaxis])**2<eps, axis = 1)+1]\n",
+    "time_gam=axis_gam_all.flatten()[80*np.array(range(100)) + np.argmax((test_acc_ga - test_acc_ga[:,-1][:, np.newaxis])**2<eps, axis = 1)+1]\n",
+    "\n",
+    "\n",
+    "print(\"-------------- Running Time -------------\")\n",
+    "print('Ours: {:0.3f}, {:0.3f}'.format(time_ours.mean(),time_ours.std()))\n",
+    "print('lvhba: {:0.3f}, {:0.3f}'.format(time_lvhba.mean(),time_lvhba.std()))\n",
+    "print('gam: {:0.3f}, {:0.3f}'.format(time_gam.mean(),time_gam.std()))\n",
+    "\n",
+    "print(\"-------------- Accuracy -------------\")\n",
+    "print('Ours: {:0.3f}, {:0.3f}'.format(test_acc_ours[:,-1].mean(),test_acc_ours[:,-1].std()))\n",
+    "print('lvhba: {:0.3f}, {:0.3f}'.format(test_acc_lvhba[:,-1].mean(),test_acc_lvhba[:,-1].std()))\n",
+    "print('gam: {:0.3f}, {:0.3f}'.format(test_acc_ga[:,-1].mean(),test_acc_ga[:,-1].std()))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
